--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "lint": "eslint ./src/**/*.{js,jsx} App.js --no-error-on-unmatched-pattern"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "@apollo/client": "^3.7.10",
+    "@expo/metro-config": "^0.7.1",
+    "dotenv": "^16.0.3",
+    "expo": "~46.0.0",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
+    "graphql": "^16.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
+    "react-native": "0.69.6",
+    "react-native-web": "0.18.7",
     "react-router-native": "^6.8.2",
-    "yup": "^1.0.2"
+    "yup": "^1.0.2",
+    "@expo/webpack-config": "^0.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
