--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@expo/metro-config": "^0.7.1",
     "dotenv": "^16.0.3",
     "expo": "~46.0.0",
-    "expo-status-bar": "~1.2.0",
+    "expo-status-bar": "~1.4.0",
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-web": "0.18.7",
     "react-router-native": "^6.8.2",
     "yup": "^1.0.2",
-    "@expo/webpack-config": "^0.17.0"
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
