--- a/package.json
+++ b/package.json
@@ -25,23 +25,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
-    "@expo/metro-config": "^0.7.1",
-    "@expo/webpack-config": "^0.17.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-picker/picker": "^2.4.8",
+    "@expo/config-plugins": "^5.0.2",
+    "@expo/metro-config": "^0.5.2",
+    "@expo/webpack-config": "^0.17.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
-    "expo": "~46.0.0",
-    "expo-linking": "~3.2.4",
-    "expo-status-bar": "~1.4.0",
+    "expo": "^47.0.13",
+    "expo-linking": "~3.3.1",
+    "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-paper": "^5.5.0",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-web": "0.18.7",
+    "jest-expo": "^47.0.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-web": "~0.18.10",
     "react-router-native": "^6.8.2",
     "yup": "^1.0.2"
   },
@@ -54,9 +53,8 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-native": "^4.0.0",
-    "jest": "^29.5.0",
-    "jest-expo": "^48.0.2",
-    "react-test-renderer": "^18.0.0"
+    "jest": "^29.2.1",
+    "react-test-renderer": "18.1.0"
   },
   "private": true
 }
