--- a/package.json
+++ b/package.json
@@ -24,37 +24,41 @@
     ]
   },
   "dependencies": {
-    "@apollo/client": "^3.7.10",
+    "@apollo/client": "^3.5.7",
     "@expo/config-plugins": "^5.0.2",
-    "@expo/metro-config": "^0.5.2",
-    "@expo/webpack-config": "^0.17.2",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@expo/metro-config": "^0.3.9",
+    "@expo/webpack-config": "0.17.4",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
-    "expo": "^47.0.13",
-    "expo-linking": "~3.3.1",
-    "expo-status-bar": "~1.4.4",
+    "dotenv": "^11.0.0",
+    "expo": "44.0.6",
+    "expo-linking": "~3.0.0",
+    "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
-    "graphql": "^16.6.0",
-    "jest-expo": "^47.0.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-web": "~0.18.10",
-    "react-router-native": "^6.8.2",
-    "yup": "^1.0.2"
+    "graphql": "^16.2.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "~0.64.4",
+    "react-native-paper": "~5.4.1",
+    "react-native-safe-area-context": "~4.4.1",
+    "react-native-web": "~0.17.7",
+    "react-router-native": "^6.2.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@babel/eslint-parser": "^7.19.1",
+    "@babel/eslint-parser": "^7.16.5",
     "@testing-library/jest-native": "^5.4.2",
     "@testing-library/react-native": "^12.0.0",
-    "eslint": "^8.34.0",
+    "eslint": "^8.6.0",
     "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-native": "^4.0.0",
     "jest": "^29.2.1",
-    "react-test-renderer": "18.1.0"
+    "jest-expo": "^47.0.1",
+    "react-test-renderer": "17.0.1"
   },
   "private": true
 }
