--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-safe-area-context": "~4.4.1",
     "react-native-web": "~0.17.7",
     "react-router-native": "^6.2.1",
+    "use-debounce": "^9.0.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
