--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-dom": "17.0.1",
     "react-native": "~0.64.4",
     "react-native-paper": "~5.4.1",
-    "react-native-safe-area-context": "~4.4.1",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-web": "~0.17.7",
     "react-router-native": "^6.2.1",
     "use-debounce": "^9.0.3",
